# MIDITransformer

./: .gitignore  README.md  generated_midi.json  output.json  output.mid  pyproject.toml
data_pre/: get_pitch.py  split.py  split_midi.py
miditransformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model/: clean.py  dataset.py  embedding.py  inference.py  nn_test.py  test_decoder.py  test_embedding.py  test_masked_attention.py  test_model.py  test_transformer.py  train.py  transformer.py
