[project]
name = "miditransformer"
version = "0.1.0"
description = "A Transformer-based MIDI music generation model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.2.0",
    "pretty-midi>=0.2.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "numpy>=1.20.0",
    "tensorboard>=2.0.0",
    "midiutil>=1.0.0",
    "music21>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model", "data_pre"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true